--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,25 +1,134 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>¡Bienvenidos a <%= title %>!</p>
-    <p>En este blog podrás participar en la discusión de programas y series de TV.</p>
-    <br>
-    <h2>Últimas entradas</h2>
-    <% blogEntries.forEach(function (entry, index) { %>
-    	<h3><%= entry.title %></h3>
-    	<%= entry.author %> @ 
-    	<%= entry.creationDate.getFullYear()%>/<%=entry.creationDate.getMonth() %>/<%=entry.creationDate.getDate() %> 
-    	<%=entry.creationDate.getHours() %>:<%=entry.creationDate.getMinutes() %> hrs
-    	<p><%= entry.content %></p>
-    	<% entry.labels.forEach(function (label, index) { %>
-    		<%= label %> 
-    	<% }); %>
-    <% }); %>
-    <p>¡Crea una nueva entrada <a href="./new_entry">aquí</a>!</p>
-  </body>
+
+    <!-- Bootstrap Core CSS -->
+    <link href='/vendor/bootstrap/css/bootstrap.min.css' rel='stylesheet'>
+
+    <!-- Theme CSS -->
+    <link href='/stylesheets/style.css' rel='stylesheet'>
+
+    <!-- Custom Fonts -->
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand" href="/"><%= title %></a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="./new_entry">Nuevo post</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Page Header -->
+    <!-- Set your background image for this header on the line below. -->
+    <header class="intro-header" style="background-image: url('/images/home-bg.jpg')">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <div class="site-heading">
+                        <h1><%= title %></h1>
+                        <hr class="small">
+                        <span class="subheading">En este blog podrás participar en la discusión de programas y series de TV.</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- Main Content -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <% blogEntries.forEach(function (entry, index) { %>
+                    <div class="post-preview">
+                        <a href="post.html">
+                            <h2 class="post-title">
+                                <%= entry.title %>
+                            </h2>
+                        </a>
+                        <h3 class="post-subtitle">
+	                        <% entry.labels.forEach(function (label, index) { %>
+	                                <%= label %> 
+	                        <% }); %>
+                        </h3>
+                        <p class="post-meta">Posted by <%= entry.author %> on <%= entry.creationDate.getFullYear()%>/<%=entry.creationDate.getMonth() %>/<%=entry.creationDate.getDate() %> 
+                        <%=entry.creationDate.getHours() %>:<%=entry.creationDate.getMinutes() %> hrs</p>
+                    </div>
+                    <hr>
+                <% }); %>
+                <!-- Pager -->
+<!--                 <ul class="pager">
+                    <li class="next">
+                        <a href="#">Older Posts &rarr;</a>
+                    </li>
+                </ul>
+ -->            </div>
+        </div>
+    </div>
+
+    <hr>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <ul class="list-inline text-center">
+                    </ul>
+                    <p class="copyright text-muted">Copyright &copy; Blog Technogi 2016</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- jQuery -->
+    <script src="/vendor/jquery/jquery.min.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Theme JavaScript -->
+    <script src="/javascripts/clean-blog.min.js"></script>
+
+</body>
+
 </html>
