Sorting posts through createdDate.

--- a/views/new-entry.ejs
+++ b/views/new-entry.ejs
@@ -79,11 +79,13 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <form action="/new_entry" method="POST">
                         <p>Tu nombre</p>
-                        <input class="form-control" type="text" placeholder="Nombre completo" name="author">
-                        <p>Etiquetas (separadas, por, comas)</p>
-                        <input class="form-control" type="text" placeholder="Etiquetas" name="labels">
+                        <input class="form-control" type="text" placeholder="Cómo te gustaría aparecer en el blog" name="author">
+                        <p>Etiquetas</p>
+                        <input class="form-control" type="text" placeholder="separadas, por, comas" name="labels">
                         <p>Título</p>
-                        <input class="form-control" type="text" placeholder="Título" name="title">
+                        <input class="form-control" type="text" placeholder="Título del post" name="title">
+                        <p>Imagen</p>
+                        <input class="form-control" type="text" placeholder="Una imagen para representar tu post" name="image">
                         <hr>
                         <textarea class="form-control" placeholder="El texto de tu post va aquí" rows="10"></textarea>
                         <hr>
