Final changes to frontend. Including examples of posts.

--- a/views/new-entry.ejs
+++ b/views/new-entry.ejs
@@ -60,7 +60,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('/images/home-bg.jpg')">
+    <header class="intro-header" style="background-image: url('/images/br-ba.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -85,9 +85,9 @@
                         <p>Título</p>
                         <input class="form-control" type="text" placeholder="Título del post" name="title">
                         <p>Imagen</p>
-                        <input class="form-control" type="text" placeholder="Una imagen para representar tu post" name="image">
+                        <input class="form-control" type="text" placeholder="URL de una imagen para tu post" name="imageURL">
                         <hr>
-                        <textarea class="form-control" placeholder="El texto de tu post va aquí" rows="10"></textarea>
+                        <textarea class="form-control" placeholder="El texto de tu post va aquí" rows="10" name="content"></textarea>
                         <hr>
                         <p><button class="btn btn-default" type="submit">Enviar</button></p>
                     </form>
