--- a/views/post.ejs
+++ b/views/post.ejs
@@ -60,7 +60,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('/images/home-bg.jpg')">
+    <header class="intro-header" style="background-image: url('<%= post.imageURL %>')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <%= post.content %>
+                    <p align="justify"><%= post.content %></p>
                 </div>
             </div>
         </div>
